# stillholds

./: .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  pyproject.toml
demo/: analysis.py  events.csv  events_more_data.csv  stillholds.toml
demo/.github/workflows/: stillholds.yml
src/stillholds/: __init__.py  attribution.py  baseline.py  claim.py  cli.py  config.py  effect.py  evaluate.py  provenance.py  report.py
tests/: conftest.py  test_attribution.py  test_baseline.py  test_effect.py  test_evaluate.py  test_integration_cli.py  test_report.py
